# ReCoDE-HMMs-for-the-discovery-of-behavioural-states

./: .pre-commit-config.yaml  404.html  DEV_README.md  LICENSE.md  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
1_Understanding_HMMs/: index.html
2a_Cleaning_your_data/: index.html
2b_Training/: index.html
2c_Validating/: index.html
3_Visualising_the_results/: index.html
data/: example_hmm.pkl  test_hmm.pkl  training_data_metadata.csv
docs/: index.md
notebooks/: 1_Understanding_HMMs.ipynb  1_markov_chains_intro.ipynb  2a_Cleaning_your_data.ipynb  2a_Curating_your_data copy.ipynb  2b_Training.ipynb  2b_Training_&_validating.ipynb  2c_Validating.ipynb  3_Visualising_the_results copy.ipynb  3_Visualising_the_results.ipynb
search/: search_index.json
src/HMM/: __iinit__.py  __init__.py  hmm.py  hmm_functions.py  hmm_plot_functions.py  misc.py  notebook_answers.ipynb
