[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["htmlcov"] # Exclude the coverage report file from setuptools package finder

[project]
name = "ReCoDE-HMMs-for-the-discovery-of-behavioural-states"
version = "0.0.1"
authors = [
    { name = "Laurence Blackhurst", email = "l.blackhurst19@imperial.ac.uk" },
    { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" }
]
requires-python = ">=3.11.6"
dependencies = [
    "numpy",
    "pandas",
    "hmmlearn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "tabulate"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-tabulate",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-mock",
    "mkdocs==1.5.3",
    "mkdocs-include-markdown-plugin==3.7.1",
    "mkdocs-jupyter==0.24.5",
    "mkdocs-material==9.4.6",
    "python-markdown-math==0.8"
]

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=HMM --cov-report=html --doctest-modules --ignore=HMM/__main__.py"
pythonpath = ["src/HMM"]

[tool.ruff]
select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort
line-length = 200

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"